# plat-analysis

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile_devcontainer  devcontainer.json  docker-compose.yml
data/plat_resources/leander_city/: Leander_Plats.gpkg  selected_plats.csv  selected_plats.qmd
documentanalysis/: errors.py  image_analysis.py  ocr.py  png.py  processor.py  processors.py  store.py
documentanalysis/docs/: architectual.md  diagram.plantuml
plat/: errors.py  image_analysis.py  ocr.py  processors.py
plat/data/ocr_output/: 201100029_ocr.txt  201100030_ocr.txt  201100031_ocr.txt  201200159_ocr.txt  201200219_ocr.txt  201500043_ocr.txt  201500044_ocr.txt  201600048_ocr.txt  201600049_ocr.txt  201600225_ocr.txt  201600251_ocr.txt  201700021_ocr.txt  201700252_ocr.txt  201800101_ocr.txt  201800102_ocr.txt  201800103_ocr.txt  201800262_ocr.txt  201800336_ocr.txt  Cap Rock 1 Address Plat_ocr.txt  Cap Rock 1 Recorded Plat_ocr.txt  GM 5 Lot 170 - 18x24_ocr.txt  GM 5 Lot 170_ocr.txt  GM 6 Lots 45-46 replat combination_ocr.txt  Grand Mesa 6 Replat_ocr.txt  (+15 more)
plat/ocr_docs/: 201100029_ocr_text.txt  201100030_ocr_text.txt  201100031_ocr_text.txt  201200159_ocr_text.txt  201200219_ocr_text.txt  201500043_ocr_text.txt  201500044_ocr_text.txt  201600049_ocr_text.txt  201600251_ocr_text.txt  201700252_ocr_text.txt  201800102_ocr_text.txt  Boulders 4 Address Plat_ocr_text.txt  Boulders 5 Address Plat 11X17_ocr_text.txt  Boulders 5 Recorded Plat_ocr_text.txt  Cap Rock 2 Recorded Plat_ocr_text.txt  Cap Rock Estates 1 Recorded Plat (FW 5)_ocr_text.txt  Fairways at Crystal Falls Sec 6 Addressing Rev 2A - 05-22-2018_ocr_text.txt  GM 6 Lots 45-46 replat combination_ocr_text.txt  GM 6 plat correction affidavit_ocr_text.txt  Grand Mesa 4 Address Plat_ocr_text.txt  Xia.Li - 2532 Costa Del Sol - RFID 4644_ocr_text.txt
test/: ocr_test.py  proc_test.py  processor_test.py  test_store.py
(+200 files in other folders)
